cmake_minimum_required(VERSION 3.17)
project(S2_laboratory_work_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(S2_laboratory_work_1 main.cpp DynamicArray.cpp DynamicArray.h Sequence.cpp Sequence.h LinkedList.cpp LinkedList.h ArraySequence.cpp ArraySequence.h LinkedListSequence.cpp LinkedListSequence.h ISorter.cpp ISorter.h DifferentSorts.cpp DifferentSorts.h menu.h tests.cpp tests.h)